<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Filmaccio</string>
    <string name="entra_text">Entra in </string>
    <string name="login_google_text">Entra con Google</string>
    <string name="reg_email_text">Registrati con email</string>
    <string name="reg_text">Non sei ancora registrato?</string>
    <string name="password_text_input">Password</string>
    <string name="hint_nome_utente_email">Indirizzo email</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="oppure">oppure</string>
    <string name="registrati_a_text_view">Registrati a</string>
    <string name="indirizzo_email_input_text">Indirizzo email</string>
    <string name="nome_utente_input_text">Nome utente</string>
    <string name="conferma_password_input_text">Conferma password</string>
    <string name="avanti">Avanti</string>
    <string name="back">Back</string>
    <string name="_1_su_3" tools:ignore="TypographyFractions">1/3</string>
    <string name="_2_su_3">2/3</string>
    <string name="_3_su_3">3/3</string>
    <string name="seleziona_il_tuo_genere">Seleziona il tuo genere</string>
    <string name="maschile">Maschile</string>
    <string name="femminile">Femminile</string>
    <string name="altro">Altro</string>
    <string name="inserisci_la_tua_data_di_nascita">Inserisci la tua data di nascita</string>
    <string name="fine">Fine</string>
    <string name="imposta_propic_text">Se vuoi, imposta un\'immagine di profilo</string>
    <string name="nome_visualizzato">Nome visualizzato</string>
    <string name="imposta_propic_description">Imposta immagine di profilo</string>
    <string name="_2_su_2">2/2</string>
    <string name="_1_su_2" tools:ignore="TypographyFractions">1/2</string>
    <string name="password_reset_titolo">Problemi di accesso?</string>
    <string name="password_reset_spiegazione">Inserisci il tuo indirizzo email e ti invieremo un link per effettuare il reset della tua password.</string>
    <string name="password_reset_alternative">Torna indietro e registrati o prova ad entrare con Google</string>
    <string name="invia_il_link_di_reset">Invia il link di reset</string>
    <string name="title_home">Home</string>
    <string name="title_feed">Feed</string>
    <string name="title_search">Ricerca</string>
    <string name="title_episodes">Episodi</string>
    <string name="title_profile">Profilo</string>
    <string name="latest_releases_text">Ultime uscite</string>
    <string name="see_all">Vedi tutto</string>
    <string name="feed">Feed</string>
    <string name="ricerca_hint">Ricerca film, serie TV, personaggi o utenti</string>
    <string name="recommended_movies_text">Film consigliati per te</string>
    <string name="recommended_series_text">Serie TV consigliate per te</string>
    <string name="trending_movies_text">Film di tendenza</string>
    <string name="trending_series_text">Serie TV di tendenza</string>
    <string name="backdrop_profile_image_description">backdrop profile image</string>
    <string name="profile_image_description">profile image</string>
    <string name="name_shown_text">Nome Visualizzato</string>
    <string name="username_text">nome_utente</string>
    <string name="edit_profile_text">Modifica profilo</string>
    <string name="app_settings_text">IMPOSTAZIONI APP</string>
    <string name="tv_time_text">TEMPO TV</string>
    <string name="months_tvtime_number">01</string>
    <string name="months_text">mesi</string>
    <string name="days_tvtime_number">22</string>
    <string name="days_text">giorni</string>
    <string name="hours_tvtime_number">07</string>
    <string name="hours_text">ore</string>
    <string name="episodes_seen_text">EPISODI VISTI</string>
    <string name="episodes_seen_number">1.7K</string>
    <string name="movies_seen_text">FILM VISTI</string>
    <string name="movies_seen_number">349</string>
    <string name="followers_text">FOLLOWERS</string>
    <string name="followers_numbers">136</string>
    <string name="following_text">SEGUITI</string>
    <string name="following_number">271</string>
    <string name="lists_text">Liste</string>
    <string name="seen_series_text">Serie TV completate</string>
    <string name="series_name">Nome serie TV</string>
    <string name="season_number_episode_number">S01 | E01</string>
    <string name="episode_name">Nome episodio</string>
    <string name="episodes_to_watch">Episodi da guardare</string>
    <string name="cambioPassword">Cambio password</string>
    <string name="confirm">Conferma</string>
    <string name="edit_profile_text_caps">MODIFICA PROFILO</string>
    <string name="cambia_immagine_di_sfondo">Cambia immagine di sfondo</string>
    <string name="niente_da_vedere_qui">Non c\'è molto da vedere qui</string>
    <string name="empty_backdrops">Empty backdrops</string>
    <string name="info_empty_backdrops">Per visualizzare delle immagini di sfondo da impostare, prima devi aggiungere almeno un film o una serie TV alle tue liste dei preferiti.</string>
    <string name="fab">FAB</string>
    <string name="before">before</string>
    <string name="indietro">Indietro</string>
    <string name="next">next</string>
    <string name="movie_backdrop">movie backdrop</string>
    <string name="movie_poster">movie poster</string>
    <string name="guardato">Guardato</string>
    <string name="preferiti">Preferiti</string>
    <string name="watchlist">Watchlist</string>
    <string name="descrizione">Descrizione</string>
    <string name="cast">Cast</string>
    <string name="valuta_questo_film">Valuta questo film</string>
    <string name="valuta">Valuta</string>
    <string name="recensisci_questo_film">Recensisci questo film</string>
    <string name="lascia_una_recensione">Lascia una recensione</string>
    <string name="modifica">Modifica</string>
    <string name="conferma">Conferma</string>
    <string name="opinioni_del_pubblico">Opinioni del pubblico</string>
    <string name="media_delle_valutazioni">Media delle valutazioni:</string>
    <string name="conociuto_per">Conociuto per</string>
    <string name="nascita">Nascita</string>
    <string name="morte">Morte</string>
    <string name="genere">Genere</string>
    <string name="segui">SEGUI</string>
    <string name="biografia">Biografia</string>
    <string name="prodotti">Prodotti</string>
    <string name="cambia_il_tuo_nome_visualizzato">Cambia il tuo nome visualizzato:</string>
    <string name="cambia_la_tua_foto_profilo_o_la_tua_immagine_di_sfondo">Cambia la tua foto profilo o la tua immagine di sfondo:</string>
    <string name="cambia_altre_informazioni">Cambia altre informazioni:</string>
    <string name="series_backdrop">series backdrop</string>
    <string name="series_poster">series poster</string>
    <string name="in_visione">In visione</string>
    <string name="stagioni">Stagioni</string>
    <string name="valuta_questa_serie_tv">Valuta questa serie TV</string>
    <string name="recensisci_questa_serie_tv">Recensisci questa serie TV</string>
    <string name="invisible_image">invisible image</string>
    <string name="tempo_film">TEMPO FILM</string>
    <string name="empty_episodes">Empty Episodes</string>
    <string name="empty_view_all">empty view all</string>
    <string name="caricamento_in_corso" tools:ignore="TypographyEllipsis">Caricamento in corso...</string>
    <string name="info_empty_episodes">Per iniziare a tracciare gli episodi da guardare, cerca una serie TV nella schermata di ricerca e aggiungila alla tua lista delle serie TV in visione</string>
    <string name="attivit_degli_utenti_seguiti">Attività degli utenti seguiti</string>
    <string name="empty_feed">Empty Feed</string>
    <string name="info_empty_feed">Per visualizzare le ultime attività relative agli utenti che segui, inizia seguendo un utente. Cerca il suo nome utente nella schermata di ricerca e seguilo.</string>
    <string name="personaggi_seguiti">Personaggi seguiti</string>
    <string name="empty_followed_people">Empty Followed People</string>
    <string name="info_empty_followed_people">Per visualizzare la lista dei personaggi che segui, inizia seguendo un personaggio. Cerca il suo nome nella schermata di ricerca o clicca nella sua scheda nel dettaglio di un film o di una serie TV e seguilo.</string>
    <string name="home">Home</string>
    <string name="film_piu_votati">Film più votati</string>
    <string name="serie_tv_piu_votate">Serie TV più votate</string>
    <string name="empty_finished_series">Empty Finished Series</string>
    <string name="ultime_uscite">Ultime uscite</string>
</resources>