<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activities.ChangeBackdropActivity">

    <TextView
        android:id="@+id/change_backdrop_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cambia_immagine_di_sfondo"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button_info"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_info"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/back"
        app:icon="@drawable/outline_info_24"
        app:iconSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ViewFlipper
        android:id="@+id/view_flipper_backdrops"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/navigation_linlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_backdrop_text_view">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/backdropRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/backdrop_item" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/niente_da_vedere_qui"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="8dp"
                android:contentDescription="@string/empty_backdrops"
                android:src="@drawable/tumbleweed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_empty_backdrops"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

        </LinearLayout>

    </ViewFlipper>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/confirm_button"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Tertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:clickable="true"
        android:contentDescription="@string/fab"
        android:text="@string/confirm"
        android:visibility="invisible"
        app:icon="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@id/view_flipper_backdrops"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/navigation_linlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/before"
            android:text="@string/indietro"
            app:icon="@drawable/round_navigate_before_24" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/next"
            android:text="@string/avanti"
            app:icon="@drawable/round_navigate_next_24"
            app:iconGravity="end" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
