<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegPrimaFragment">

    <LinearLayout
        android:id="@+id/registratiLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/registratiTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/registrati_a_text_view"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registratiFilmaccioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonAvanti"
        style="@style/Widget.Material3.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/avanti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerData"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/headRegLinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="70dp">

        <Button
            android:id="@+id/buttonBack"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            app:icon="@drawable/round_arrow_back_24"
            app:iconSize="24dp" />

        <TextView
            android:id="@+id/indicatorePagReg2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/_2_su_3"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="?attr/colorPrimary"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <TextView
        android:id="@+id/selezionaGenereTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/seleziona_il_tuo_genere"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registratiLinearLayout" />

    <RadioGroup
        android:id="@+id/genereRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selezionaGenereTextView">

        <RadioButton
            android:id="@+id/maschileRadioButton"
            style="@style/Widget.Material3.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/maschile" />

        <RadioButton
            android:id="@+id/femminileRadioButton"
            style="@style/Widget.Material3.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/femminile" />

        <RadioButton
            android:id="@+id/altroGenereRadioButton"
            style="@style/Widget.Material3.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/altro" />
    </RadioGroup>

    <View
        android:id="@+id/divider3"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genereRadioGroup" />

    <TextView
        android:id="@+id/dataNascitaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/inserisci_la_tua_data_di_nascita"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <DatePicker
        android:id="@+id/spinnerData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataNascitaTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>