<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.fragments.RegTerzaFragment">

    <LinearLayout
        android:id="@+id/registratiLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/registratiTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/registrati_a_text_view"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registratiFilmaccioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonFine"
        style="@style/Widget.Material3.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/fine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/propic_set_simage_view"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/headRegLinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonBack"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            app:icon="@drawable/round_arrow_back_24"
            app:iconSize="24dp" />

        <TextView
            android:id="@+id/indicatorePagReg2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/_2_su_2"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="?attr/colorPrimary"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <TextView
        android:id="@+id/propicTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/imposta_propic_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeVisualizatoTextInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nomeVisualizatoTextInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registratiLinearLayout"
        app:startIconDrawable="@drawable/round_contact_page_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nomeVisualizzatoTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_visualizzato"
            android:inputType="textShortMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/propic_set_simage_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/imposta_propic_description"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/Theme.Filmaccio.CircleShapeAppearanceOverlay"
        android:src="@drawable/default_propic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/propicTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>